fix: исправить метод createTask